Cleanup of new data section

--- a/index.html
+++ b/index.html
@@ -175,12 +175,11 @@
 						</span>
 						
 					</header>
-					<p> This page allows you to download the geoBoundaries Open product.  The only requirement for use is <a href="index.html#citation">acknowledgement</a>. Users should be aware of the following usage notes for this product:
+					<p> The only requirement for use is <a href="index.html#citation">acknowledgement</a>. Users should be aware of the following usage notes for this product:
                         <ul style="margin-top:-.75cm; margin-bottom:0.25cm;">
                             <li>We seek to represent countries as they would represent themselves in the case of conflicted boundaries.  This can result in overlaps between countries.  If you need a single, seamless global boundary, please consider our <a href="downloadCGAZ.html">CGAZ dataset.</a></li>
                             <li>Each boundary is the most recent, most accurate open license product we could create or retrieve from sources with clearly defined licenses.</li>
                             <li>Every boundary has a unique ID across the entire globe.  Boundary IDs only change when some element of the underlying data changes.</li>
-                            <li>You can choose between products with minor simplifications applied (the default below), or the original, highest-precision files (the "Large File Size" links).  While the differences in geometries are very small, the simplified geometries are frequently an order of magnitude (or more) smaller in file size and loading speeds.  We recommend the simplified files for most uses.</li>
                         </ul>
 					<div style="font-size:15px" style="margin-top:0.05cm;">Choose Data Product(s):</header>
 					<div class="form-check" style="margin-top:-0.03cm; font-size:10px;">
@@ -386,10 +385,12 @@
 
 								<div id="tab-container" class="tab-container">
 									<ul class='etabs'>
+										<li class='tab'><a href="#generalUse">General Use</a></li>
 										<li class='tab'><a href="#tabs1-html">Academic Cite</a></li>
 										<li class='tab'><a href="#tabs1-js">Website</a></li>
 										<li class='tab'><a href="#tabs1-css">Leaflet</a></li>
 									</ul>
+									
 
 									<div id="tabs1-html" class="box">
 										For academic papers that use geoBoundaries in analysis, we ask that you cite our
@@ -407,7 +408,7 @@
 									<div id="tabs1-js" class="box">
 										When using geoBoundaries on the web, we ask that you put the name
 										"geoBoundaries" with a link back to this website, www.geoboundaries.org,
-										somewhere (prominent if possible!) on the page that uses the boundaries. This
+										somewhere prominent on the page that uses the boundaries. This
 										can be a stand-alone link or within a sentence. For example, any of the below
 										would be acceptable:
 										<br /><br />
