--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							ajaxURL: "https://www.geoboundaries.org/api/", //ajax URL
 							height: screen.height * 0.60,
 							layout: "fitDataFill",
-							resizableColumns: false,
+							resizableColumns: true,
 							responsiveLayout: false,
 							groupBy: ["Continent","boundaryName"],
 							//autoColumns:true,
@@ -375,7 +375,7 @@
 							<h1>How to Use</h1>
 							<p>Any uses of geoBoundaries must come with an acknowledgement - we really need it!</p>
 						</header>
-						<p><b>All we require is an acknowledgement in any products you produce which use our data.</b> The
+						<p><b>We require an acknowledgement in any products you produce which use our data.</b> The
 							geoBoundaries team is primarily judged on it's citations: it is how our users, funders and
 							peers track our progress and impact. In most uses, you should cite two sources: geoBoundaries,
 						    and the underlying source we provide in the metadata for a given file. </p>
