--- a/index.html
+++ b/index.html
@@ -175,11 +175,12 @@
 						</span>
 						
 					</header>
-					<p> The only requirement for use is <a href="index.html#citation">acknowledgement</a>. Users should be aware of the following usage notes for this product:
+					<p> <a href="index.html#citation">Acknowledgement</a> is required for use of these products. Users should be aware of the following usage notes:
                         <ul style="margin-top:-.75cm; margin-bottom:0.25cm;">
                             <li>We seek to represent countries as they would represent themselves in the case of conflicted boundaries.  This can result in overlaps between countries.  If you need a single, seamless global boundary, please consider our <a href="downloadCGAZ.html">CGAZ dataset.</a></li>
                             <li>Each boundary is the most recent, most accurate open license product we could create or retrieve from sources with clearly defined licenses.</li>
                             <li>Every boundary has a unique ID across the entire globe.  Boundary IDs only change when some element of the underlying data changes.</li>
+							<li>The data available on this website and through our <a href="api.html">API</a> are the most recent available.  If you require a versioned release (i.e., for research replication), please visit our <a href="https://github.com/wmgeolab/geoBoundaries/releases">historic releases page.</a></li>
                         </ul>
 					<div style="font-size:15px" style="margin-top:0.05cm;">Choose Data Product(s):</header>
 					<div class="form-check" style="margin-top:-0.03cm; font-size:10px;">
