--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						</span>
 						
 					</header>
-					<p> <a href="index.html#citation">Acknowledgement</a> is required for use of these products. Users should be aware of the following usage notes:
+					<p> <b><a href="index.html#citation">Acknowledgement</a> is required for use of these products.</b> Users should be aware of the following usage notes:
                         <ul style="margin-top:-.75cm; margin-bottom:0.25cm;">
                             <li>We seek to represent countries as they would represent themselves in the case of conflicted boundaries.  This can result in overlaps between countries.  If you need a single, seamless global boundary, please consider our <a href="downloadCGAZ.html">CGAZ dataset.</a></li>
                             <li>Each boundary is the most recent, most accurate open license product we could create or retrieve from sources with clearly defined licenses.</li>
