--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<section>
 					<header class="major">
 						<span>
-							<h2 id="getdata" style="display:inline;">Get the Data</h2> 
+							<h2 id="getdata" style="display:inline;">Download geoBoundaries</h2> 
 						</span>
 						
 					</header>
