1 million dollarsgit add -A .!

--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
 						<p>Produced and maintained by the William & Mary <a href="http://geolab.wm.edu">geoLab</a> since
 							2017, the geoBoundaries Global Database of Political Administrative Boundaries Database is
 							an online, open license resource of boundaries (i.e., state, county) for every country in
-							the world. We currently track approximately 300,000 boundaries across 199 entities, including all 195 UN member states,
-							Greenland, Taiwan, Niue, and Kosovo. All boundaries are available to view or download in
-							common file formats, including shapefiles; the only requirement for use is <a
-								href="index.html#citation">acknowledgement</a>.</p>
+							the world. We currently track approximately 1 million boundaries within over 200 entities, including all 195 UN member states. 
+							All boundaries are available to view or download in common file formats, including shapefiles; 
+							the only requirement for use is <a href="index.html#citation">acknowledgement</a>.</p>
 						<ul class="actions">
 							<li><a href="index.html#getdata" class="button big">Download the Data</a></li>
 							<li><a href="geoContrast.html" class="button big">Visualize the Data</a></li>
